data/derived/comb/progs/unify/prog4245.ml.out
Characters 57-62:
  in g b f
     ^^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
